--- a/pr_dosyalar/sheet002.htm
+++ b/pr_dosyalar/sheet002.htm
@@ -129,12 +129,11 @@ else
  </tr>
  <tr height=41 style='mso-height-source:userset;height:30.75pt'>
   <td height=41 class=xl99 width=64 style='height:30.75pt;border-top:none;
-  width:48pt'>ÇARÞAM</td>
+  width:48pt'>CARSAM</td>
   <td class=xl101 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl101 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl103 width=64 style='border-top:none;border-left:none;width:48pt'>9/B</td>
-  <td class=xl99 width=64 style='border-top:none;border-left:none;width:48pt'><span
-  style='mso-spacerun:yes'> </span>9/B</td>
+  <td class=xl99 width=64 style='border-top:none;border-left:none;width:48pt'>9/B</td>
   <td class=xl100 width=10 style='border-top:none;border-left:none;width:8pt'>&nbsp;</td>
   <td class=xl102 width=64 style='border-top:none;border-left:none;width:48pt'>10-C</td>
   <td class=xl103 width=64 style='border-top:none;border-left:none;width:48pt'>10-C</td>
