--- a/clock.html
+++ b/clock.html
@@ -1,4 +1,4 @@
 <html>
 <script src="https://cdn.logwork.com/widget/text.js"></script>
-<a href="https://logwork.com/current-time-in-istanbul-turkey" class="clock-widget-text" data-timezone="Asia/Istanbul" data-language="tr">Istanbul, Turkey</a>
+<a href="https://logwork.com/current-time-in-istanbul-turkey" class="clock-widget-text" data-timezone="Asia/Istanbul" data-language="tr"></a>
 </html>
