--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><body>Privacy Policy<br><br>
 
-i am not access and use any data yours. not care by me. Maybe tracking you only Gooogle Admob and Google Advertisment (analitics etc...). I don't care your datas. I'm not collecting your datas :)
+i am not access and use any data yours. not care by me. Maybe tracking you only Google Admob and Google Advertisment (analitics etc...). I don't care your datas. I'm not collecting your datas :)
 </body>
 </html>
