--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <html><body>Privacy Policy<br><br>
 
 i am not access and use any data yours. not care by me. Maybe tracking you only Google Admob and Google Advertisment (analitics etc...). I don't care your datas. I'm not collecting your datas :)
+
+Permissions for google Admob (Advertising)
+
+.ACCESS_NETWORK_STATE,                        -> for admob
+.INTERNET,                                    ->  for admob
+.WAKE_LOCK,                                   ->  on game play device not sleep
+.WRITE_EXTERNAL_STORAGE,                      -> installing game external storage
+android.permission.ACCESS_NETWORK_STATE,      ->  for admob
+android.permission.INTERNET,                  -> for admob
+android.permission.WAKE_LOCK,                 ->  on game play device not sleep
+com.google.android.c2dm.permission.RECEIVE    -> google stuff
+
 </body>
 </html>
