--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><body>Privacy Policy<br><br>
 
-i am not access and use any data yours. not care by me. Maybe tracking you only Google Admob and Google Advertisment (analitics etc...). I don't care your datas. I'm not collecting your datas :)
+i am not access and use any users data. Google Admob and Google Advertisment (analitics etc...). Firebase etc... SDKs collecting your datas for advertising/statistic.
 
 Permissions for google Admob (Advertising)
 
@@ -12,6 +12,11 @@ android.permission.ACCESS_NETWORK_STATE,      ->  for admob
 android.permission.INTERNET,                  -> for admob
 android.permission.WAKE_LOCK,                 ->  on game play device not sleep
 com.google.android.c2dm.permission.RECEIVE    -> google stuff
+
+more info for admob SDK: https://developers.google.com/admob/android/play-data-disclosure
+
+more info for firebase SDK: https://firebase.google.com/docs/android/play-data-disclosure
+
 
 </body>
 </html>
