--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <html><body>Privacy Policy<br><br>
 
-i am not access and use any users data. Google Admob and Google Advertisment (analitics etc...). Firebase etc... SDKs collecting your datas for advertising/statistic.
-
-Permissions for google Admob (Advertising)
-
-.ACCESS_NETWORK_STATE,                        -> for admob
-.INTERNET,                                    ->  for admob
-.WAKE_LOCK,                                   ->  on game play device not sleep
-.WRITE_EXTERNAL_STORAGE,                      -> installing game external storage
-android.permission.ACCESS_NETWORK_STATE,      ->  for admob
-android.permission.INTERNET,                  -> for admob
-android.permission.WAKE_LOCK,                 ->  on game play device not sleep
-com.google.android.c2dm.permission.RECEIVE    -> google stuff
-
-more info for admob SDK: https://developers.google.com/admob/android/play-data-disclosure
-
-more info for firebase SDK: https://firebase.google.com/docs/android/play-data-disclosure
-
+i am not access and use any users data. Google Admob and Google Advertisment (analitics etc...). Firebase etc... SDKs collecting your datas for advertising/statistic.<br>
+<br>
+Permissions for google Admob (Advertising)<br>
+<br>
+.ACCESS_NETWORK_STATE,                        -> for admob<br>
+.INTERNET,                                    ->  for admob<br>
+.WAKE_LOCK,                                   ->  on game play device not sleep<br>
+.WRITE_EXTERNAL_STORAGE,                      -> installing game external storage<br>
+android.permission.ACCESS_NETWORK_STATE,      ->  for admob<br>
+android.permission.INTERNET,                  -> for admob<br>
+android.permission.WAKE_LOCK,                 ->  on game play device not sleep<br>
+com.google.android.c2dm.permission.RECEIVE    -> google stuff<br>
+<br>
+more info for admob SDK: https://developers.google.com/admob/android/play-data-disclosure<br>
+<br>
+more info for firebase SDK: https://firebase.google.com/docs/android/play-data-disclosure<br>
+<br>
 
 </body>
 </html>
