--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html><body>Privacy Policy<br><br>
+Company: MuratBk 
 
-i am not access and use any users data. Google Admob and Google Advertisment (analitics etc...). Firebase etc... SDKs collecting your datas for advertising/statistic.<br>
+My apps not access and use any users data. Google Admob and Google Advertisment (analitics etc...). Firebase etc... SDKs collecting your datas for advertising/statistic.<br>
+<br>
+                              MuratBk.
 <br>
 Permissions for google Admob (Advertising)<br>
 <br>
